@@ -15,19 +15,13 @@ public class MenuLiderFrame extends JFrame {
     private final GestorSigma controlador;
     private final Usuario usuarioActual;
 
-    /**
-     * @param usuarioActual el líder que inició sesión. Se necesita para
-     *                       poder pasarlo a CambiarEstadoPanel y así filtrar
-     *                       y restringir el cambio de estado solo a sus
-     *                       propias tareas (Tarea D-3).
-     */
     public MenuLiderFrame(GestorSigma controlador, Usuario usuarioActual) {
         this.controlador = controlador;
         this.usuarioActual = usuarioActual;
         setTitle("SIGMA - Menú Líder");
         setSize(450, 400);
         setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-        setLayout(new GridLayout(8, 1, 10, 10));
+        setLayout(new GridLayout(9, 1, 10, 10));
 
         JButton btnCrearMeta = new JButton("Crear Meta");
         JButton btnAsignarTarea = new JButton("Asignar Tarea");
@@ -41,7 +35,7 @@ public class MenuLiderFrame extends JFrame {
 
         btnCrearMeta.addActionListener(e -> {
             String nombre = JOptionPane.showInputDialog("Nombre de la meta:");
-            if (nombre != null && !nombre.trim().isEmpty()) {
+            if (nombre != null && !nombre.isBlank()) {
                 boolean ok = controlador.agregarMeta(nombre);
                 JOptionPane.showMessageDialog(this, ok ? "Meta creada." : "La meta ya existe.");
             }
@@ -219,14 +213,14 @@ public class MenuLiderFrame extends JFrame {
             new LoginFrame(controlador).setVisible(true);
         });
 
+        add(btnVerUsuarios);
         add(btnCrearMeta);
+        add(btnProgreso);
         add(btnAsignarTarea);
         add(btnVerTareas);
-        add(btnProgreso);
         add(btnCambiarEstado);
         add(btnEditarFechas);
         add(btnEliminarTarea);
-        add(btnVerUsuarios);
         add(btnCerrar);
     }
 }
